--- a/hawkshaw/templates/includes/scripts.html
+++ b/hawkshaw/templates/includes/scripts.html
@@ -39,3 +39,9 @@
 
 <!-- Volt JS -->
 <script src="{% static '/js/volt.js' %}"></script>
+
+<!-- Toasts -->
+<script src="{% static '/js/toasts.js' %}"></script>
+
+<!-- Project Specific -->
+<script src="{% static '/js/project.js' %}"></script>
