--- a/hawkshaw/static/css/project.css
+++ b/hawkshaw/static/css/project.css
@@ -11,3 +11,29 @@
   background-color: #f2dede;
   border-color: #eed3d7;
 }
+
+#image-form {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#image-form i {
+  font-size: 2em;
+  color: white;
+  display: none;
+}
+
+.profile-cover:hover #image-form {
+  display: block;
+}
+
+.profile-cover:hover #image-form i {
+  display: block;
+}
