--- a/hawkshaw/templates/account/verification_sent.html
+++ b/hawkshaw/templates/account/verification_sent.html
@@ -1,12 +1,22 @@
-{% extends "account/base.html" %}
+
+{% extends "layouts/base-fullscreen.html" %}
+
 
 {% load i18n %}
 
 {% block head_title %}{% translate "Verify Your E-mail Address" %}{% endblock %}
 
-{% block inner %}
+{% block content %}
+<div class="row">
+  <div class="col-md-6 offset-md-3 mh-100vh">
+    <div class="bg-white p-3 rounded mt-5">
+
     <h1>{% translate "Verify Your E-mail Address" %}</h1>
 
     <p>{% blocktranslate %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
 
+    <a href="{% url 'home' %}" class="btn btn-primary">Return to Login</a>
+    </div>
+  </div>
+</div>
 {% endblock %}
