--- a/hawkshaw/templates/includes/navigation.html
+++ b/hawkshaw/templates/includes/navigation.html
@@ -129,23 +129,26 @@
                     </li>
                     <li class="nav-item dropdown ms-lg-3">
                       <a class="nav-link dropdown-toggle pt-1 px-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <div class="media d-flex align-items-center">
-                          <img class="avatar rounded-circle" alt="Image placeholder" src="{% static '/img/team/profile-picture-3.jpg' %}">
+                        <div id="user-dropdown-swap" class="media d-flex align-items-center">
                           <div class="media-body ms-2 text-dark align-items-center d-none d-lg-block">
                             <span class="mb-0 font-small fw-bold text-gray-900">
-                              Current User: <strong>{{ request.user.username }}</strong>
+                              Hi <strong>{{ request.user.name|default:request.user.username|title }}</strong> &nbsp; 
                             </span>
                           </div>
+                          <img 
+                                src="{% if request.user.avatar %}{{ request.user.avatar.url}}{% else %}{% static '/img/avatars/default/blank-profile-picture.png' %}{% endif %}"
+                                class="avatar rounded-circle" alt="Image placeholder" 
+                                hx-get="{% url 'users:get-profile-image' %}"
+                                hx-swap="outerHTML"
+                                hx-trigger="profile_updated from:body"
+                                hx-target="#user-dropdown-swap"
+                          >
                         </div>
                       </a>
                       <div class="dropdown-menu dashboard-dropdown dropdown-menu-end mt-2 py-1">
-                        <a class="dropdown-item d-flex align-items-center" href="/settings.html">
+                        <a class="dropdown-item d-flex align-items-center" href="{% url 'users:detail' request.user.username  %}">
                           <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd"></path></svg>
                           My Profile
-                        </a>
-                        <a class="dropdown-item d-flex align-items-center" href="/settings.html">
-                          <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path></svg>
-                          Settings
                         </a>
                         <a class="dropdown-item d-flex align-items-center" href="#">
                           <svg class="dropdown-icon text-gray-400 me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5 3a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2V5a2 2 0 00-2-2H5zm0 2h10v7h-2l-1 2H8l-1-2H5V5z" clip-rule="evenodd"></path></svg>
@@ -156,7 +159,10 @@
                           Support
                         </a>
                         <div role="separator" class="dropdown-divider my-1"></div>
-                        <a class="dropdown-item d-flex align-items-center" href="{% url 'account_logout' %}">
+                        <a class="dropdown-item d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#static_modal"
+                          hx-get="{% url 'account_logout' %}" 
+                          hx-target="#modal-swap"
+                          hx-trigger="click">
                           <svg class="dropdown-icon text-danger me-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>                
                           Logout
                         </a>
