--- a/hawkshaw/templates/layouts/base.html
+++ b/hawkshaw/templates/layouts/base.html
@@ -1,20 +1,3 @@
-<!--
-
-=========================================================
-* Volt Free - Bootstrap 5 Dashboard
-=========================================================
-
-* Product Page: https://themesberg.com/product/admin-dashboard/volt-bootstrap-5-dashboard
-* Copyright 2021 Themesberg (https://www.themesberg.com)
-* License (https://themesberg.com/licensing)
-
-* Designed and coded by https://themesberg.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software. Please contact us to request a removal.
-
--->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -24,29 +7,29 @@
 <!-- Primary Meta Tags -->
 
 <title>
-    Django Volt Dashboard - {% block title %}{% endblock %} | AppSeed
+    Hawkshaw Bug Tracker - {% block title %}{% endblock %}
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta name="author" content="Themesberg">
-<meta name="description" content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS.">
-<meta name="keywords" content="bootstrap 5, bootstrap, bootstrap 5 admin dashboard, bootstrap 5 dashboard, bootstrap 5 charts, bootstrap 5 calendar, bootstrap 5 datepicker, bootstrap 5 tables, bootstrap 5 datatable, vanilla js datatable, themesberg, themesberg dashboard, themesberg admin dashboard" />
-<link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-volt">
+<meta name="title" content="Hawkshaw Bug Tracker - Sign up page">
+<meta name="author" content="JayStabins">
+<meta name="description" content="Hawkshaw Bug Tracker.">
+<meta name="keywords" content="Bug Tracker" />
+<link rel="canonical" href="https://hawkshaw.jaystabins.com">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://demo.themesberg.com/volt-pro">
-<meta property="og:title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta property="og:description" content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS.">
-<meta property="og:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-pro-bootstrap-5-dashboard/volt-pro-preview.jpg">
+<meta property="og:title" content="Hawkshaw Bug Tracker - Sign up page">
+<meta property="og:description" content="Hawkshaw Bug Tracker.">
+<meta property="og:image" content="">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://demo.themesberg.com/volt-pro">
-<meta property="twitter:title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta property="twitter:description" content="Volt Pro is a Premium Bootstrap 5 Admin Dashboard featuring over 800 components, 10+ plugins and 20 example pages using Vanilla JS.">
-<meta property="twitter:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-pro-bootstrap-5-dashboard/volt-pro-preview.jpg">
+<meta property="twitter:title" content="Volt Free Bootstrap Dashboard - Sign up page">
+<meta property="twitter:description" content="Hawkshaw Bug Tracker.">
+<meta property="twitter:image" content="">
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="120x120" href="{% static '/img/favicon/apple-touch-icon.png' %}">
@@ -57,6 +40,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
 
+
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -64,9 +48,10 @@
 
 <link type="text/css" href="{% static '/vendor/notyf/notyf.min.css' %}" rel="stylesheet">
 <link type="text/css" href="{% static '/css/volt.css' %}" rel="stylesheet">
+<link type="text/css" href="{% static '/css/project.css' %}" rel="stylesheet">
 
 <!-- HTMX -->
-<script src="https://unpkg.com/htmx.org@1.8.4"></script>
+ <script src="https://unpkg.com/htmx.org@1.8.4"></script>
 
 <!-- Specific Page JS goes HERE  -->    
 {% block stylesheets %}{% endblock stylesheets %}
@@ -84,14 +69,29 @@
 
       {% include 'includes/settings-box.html' %}
 
-      {% include 'includes/footer.html' %}
+      {% include "includes/toasts.html" %}
+
+      {% comment %} {% include 'includes/footer.html' %} {% endcomment %}
 
     </main>
-  {% block modal %}{% endblock modal %}
+  {% block modal %}
+  <!-- Modal -->
+  <div class="modal fade" data-bs-backdrop="static" id="static_modal" data-bs-keyboard="false"
+          tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content" id='modal-swap'>
+          <!-- HTMX Modal Content goes here -->
+          </div>
+      </div>
+  </div>
+  {% endblock modal %}
   {% include 'includes/scripts.html' %}
     
   <!-- Specific Page JS goes HERE  -->
   {% block javascripts %}{% endblock javascripts %}  
+
+  <script>
+  </script>
       
 </body>
 </html>
