--- a/hawkshaw/templates/pages/home.html
+++ b/hawkshaw/templates/pages/home.html
@@ -1,14 +1,6 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-<div>
-    Authenticated User :
-    {% if request.user.name %}
-        {{request.user.name}}
-    {% else %}
-        {{request.user.username}}
-    {% endif %}
-</div>
 
 <div class="col col-4 bg-white rounded p-3">
     <div class="row" id="issue-list-view"
@@ -32,13 +24,7 @@
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="static_modal" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content" id='modal-swap'>
-        <!-- HTMX Modal Content goes here -->
-        </div>
-    </div>
-</div>
+
 {% endblock content %}
+{% block modal %}
+{% endblock modal %}
