--- a/hawkshaw/templates/users/base.html
+++ b/hawkshaw/templates/users/base.html
@@ -1,12 +1,8 @@
-{% extends "base.html" %}
+{% extends "layouts/base.html" %}
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-6 offset-md-3 mh-100vh">
-    <div class="bg-white p-3 rounded mt-5">
-    {% block inner %}{% endblock %}
-    </div>
-  </div>
-</div>
+
+{% block inner %}{% endblock %}
+
 {% endblock %}
